<resources>
    <string name="app_name">KnowYourLocality</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer menu labels -->

    <string name="nav_food">Food</string>
    <string name="nav_fashion">Fashion</string>
    <string name="nav_electronics">Electronics</string>
    <string name="nav_home_furn">Home and Furniture</string>
    <string name="nav_books">Books</string>
    <string name="nav_medicine">Medicine</string>
    <string name="nav_utilities">Utilities</string>
    <string name="nav_account">Account</string>
    <string name="nav_about">About</string>

    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Food</item>
        <item>Fashion</item>
        <item>Electronics</item>
        <item>Home_Furniture</item>
        <item>Books</item>
        <item>Medicine</item>
        <item>Utilities</item>
        <item>Account</item>
        <item>About</item>
    </string-array>

    <string name="activity_title_help">Help</string>
    <string name="action_clear_all" />


    <!-- food fragment -->


    <string-array name="food_category">
        <item>Groceries</item>
        <item>Fast Food</item>
        <item>Restaurant</item>
        <item>Bakery</item>
    </string-array>

    <string-array name="home_category">
        <item>Furniture</item>
        <item>Kitchen and Dining</item>
        <item>Lighting</item>
    </string-array>

    <string-array name="electronics_category">
        <item>Mobiles and Accessories</item>
        <item>Televisions and Home Appliances</item>
        <item>Laptops</item>
        <item>Printers, Monitors and more</item>
        <item>Camera and Accessories</item>
    </string-array>

    <string-array name="fashion_category">
        <item>Men</item>
        <item>Women</item>
        <item>Kids and Baby</item>
        <item>Personal Care</item>
    </string-array>

    <string-array name="utilities_category">
        <item>Sports and Fitness</item>
        <item>Luggage and Travel</item>
        <item>Service Centers</item>
        <item>Automotive and More...</item>
    </string-array>

    <string-array name="books_category">
        <item>Book Stores</item>
        <item>Pens and Stationary</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation_drawer_home">NavigationDrawerHome</string>
    <string name="title_activity_maps">Map</string>


</resources>
